ecmascript/parser/tests/test262-error-references/fail/78e777115c4cfcc2.js.stderr
error: Expected Word(while), got Some(BinOp(Mul))
 --> $DIR/tests/test262-parser/fail/78e777115c4cfcc2.js:1:10
  |
1 | do { x } *
  |          ^

